# rust-device-detector

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cliff.toml  copy_static_files.sh
.github/workflows/: release.yml  test.yml
examples/: rdd.cpp
includes/: rdd.h
regexes/: bots.yml  oss.yml
regexes/client/: feed_readers.yml  libraries.yml  mediaplayers.yml  mobile_apps.yml  pim.yml
regexes/device/: mobiles.yml  notebooks.yml  portable_media_player.yml
src/: client_hints.rs  device_detector.rs  ffi.rs  http.rs  known_browsers.rs  known_oss.rs  lib.rs  main.rs  parsers.rs
src/device_detector/: test.rs
src/parsers/: bot.rs  client.rs  device.rs  oss.rs  utils.rs  vendor_fragments.rs
src/parsers/client/: browsers.rs  feed_readers.rs  hints.rs  libraries.rs  media_players.rs  mobile_apps.rs  pim.rs
src/parsers/client/browsers/: engines.rs
src/parsers/client/hints/: apps.rs  browsers.rs
src/parsers/device/: cameras.rs  car_browsers.rs  consoles.rs  mobiles.rs  notebooks.rs  portable_media_players.rs  shell_tvs.rs  televisions.rs
test_each_file/: Cargo.toml
test_each_file/src/: lib.rs
tests/data/fixtures/: bots.yml  clienthints.yml  feature_phone.yml  mobile_apps.yml  mod.rs  podcasting.yml  portable_media_player.yml  smart_speaker.yml  smartphone-22.yml  smartphone-4.yml
tests/data/fixtures/parser/: oss.yml
tests/data/fixtures/parser/client/: browser.yml  mobile_app.yml
tests/fixtures/: desktop.yml  mobile_apps.yml  smart_speaker.yml
tests/php_tests/: README.md  bots.rs  fixtures.rs  main.rs  non_bots.rs  parser.rs  utils.rs
tests/php_tests/parser/: client.rs  device.rs  oss.rs  type_methods.rs  vendorfragments.rs
tests/php_tests/parser/client/: browsers.rs  feed_reader.rs  library.rs  mediaplayers.rs  mobile_apps.rs  pim.rs
tests/php_tests/parser/device/: camera.rs  car_browser.rs  console.rs  notebook.rs  shell_tv.rs
utils/: loadtest.ex
