[package]
name = "rust-device-detector"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indexmap = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
serde_yaml = "0.9"
serde_json = "1.0"
fancy-regex = "0.11"
anyhow = "1.0"
itertools = "0.11"
once_cell = "1.8"
tokio = { version = "1", features = ["full"] }
version-compare = "0.1.1"
fallible-iterator = "0.3"
moka = { version = "0.11", optional = true }
const_format = "0.2"
# dhat = "0.3.2"
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
stats_alloc = "0.1.1"
futures = "0.3"
glob = "0.3"

# proc macro to iterate over yml files in tests, has to be own crate.
test_each_file = { path = "test_each_file" }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]


[features]
default = []
full = ["cache"]
# cache is a feature because moka brings in a lot of dependencies.
cache = ["dep:moka"]

[profile.test]
# these tests take a long time without optimization
opt-level = 3

[profile.release]
# 15% improvement in speed, last time I tested.
lto = true
#debug = 1
#incremental = true
#debug = true
