[package]
name = "test_each_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.67"
syn = {version="2.0.33", features=["full"]}
pathdiff = "0.2.1"
itertools = "0.11.0"
check_keyword = "0.2"

[lib]
proc-macro = true



